# Agentic-doc-processing

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
src/agentic_doc/: __init__.py  config.py  logging_utils.py  state.py  utils.py
src/agentic_doc/agent/: __init__.py  build_agent.py  callbacks.py  prompt.py
src/agentic_doc/detection/: __init__.py  assessor.py  image_enhancer.py  line_detector.py  region_detector.py  visualizer.py
src/agentic_doc/export/: __init__.py  html_export.py  markdown.py  pagexml.py
src/agentic_doc/gui/: __init__.py  panel.py
src/agentic_doc/gui/resources/: panel_v12.html
src/agentic_doc/tools/: __init__.py  analysis.py  export_tools.py  layout.py  transcription_tools.py
src/agentic_doc/transcription/: __init__.py  llm_transcriber.py  tesseract_ocr.py  trocr.py
tests/: __init__.py  test_line_detector.py
